Deck: Missing border when hovering over board list in app navigation. Fixes #207 (#208)

--- a/css/apps/official/_deck.scss
+++ b/css/apps/official/_deck.scss
@@ -6,6 +6,10 @@
 
 /* Deck --------------------------------------------------------------------- */
 
+.app-deck .app-navigation__list > .app-navigation-entry {
+    border-right: 1px solid var(--color-border);
+}
+
 .card {
     background-color: var(--color-background-darker) !important;
     border: 1px solid var(--color-border);
